[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# this should be our single source of truth for versioning

[project]
name = "kernelbench"
version = "0.2.0.dev0"
requires-python = "==3.10.*"
dependencies = [
    # Frameworks
    "torch==2.9.0",

    "transformers>=4.57.3",
    "datasets>=4.4.2",
    "modal>=1.3.0",

    # helper
    "tqdm>=4.67.1",
    "packaging",
    "setuptools",
    "pydra-config",
    "ninja>=1.13.0",
    "tomli>=2.3.0",
    "tabulate>=0.9.0",

    # Numerics
    "einops>=0.8.1",
    "python-dotenv>=1.2.1",
    "numpy>=2.0.0,<2.4.0",  # 2.4.0 requires Python >=3.11, we use 3.10

    # LLM providers
    "openai>=2.14.0",
    "litellm[proxy]>=1.80.10",
]

[project.optional-dependencies]
gpu = [
    # GPU-specific dependencies (requires CUDA)
    "triton==3.5.*",
    "nvidia-cutlass-dsl",
    "tilelang",
    "cupy-cuda12x==13.6.0",
    "nsight-python",
]
dev = [
    "pytest",
    "ruff",
]


[tool.setuptools.packages.find]
where = ["src"]
include = ["kernelbench*"]

[tool.setuptools.package-data]
kernelbench = ["prompts/**/*"]